[gd_scene load_steps=5 format=3 uid="uid://cvcdxs4emhrld"]

[ext_resource type="Script" path="res://game_board/turn_and_players.gd" id="1_qamer"]
[ext_resource type="Texture2D" uid="uid://0yfjp4ojbl73" path="res://bordered_hexagon.svg" id="3_o7yxl"]
[ext_resource type="Texture2D" uid="uid://dv1n5ns74h71r" path="res://confirmation_panel_bar.svg" id="4_65fga"]
[ext_resource type="Script" path="res://game_board/player_picker.gd" id="4_amf1a"]

[node name="TurnAndPlayers" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_qamer")

[node name="Align" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 25.0
offset_right = -50.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_constants/separation = 50

[node name="PlayerListLeft" type="HBoxContainer" parent="Align"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="HexButton" type="TextureButton" parent="Align"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
layout_mode = 2
texture_normal = ExtResource("3_o7yxl")
stretch_mode = 3

[node name="VAlign" type="VBoxContainer" parent="Align/HexButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TurnLabel" type="Label" parent="Align/HexButton/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Turn
"
horizontal_alignment = 1

[node name="TurnNumber" type="Label" parent="Align/HexButton/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="TurnState" type="Label" parent="Align/HexButton/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Waiting
"
horizontal_alignment = 1

[node name="BackgroundBar" type="TextureRect" parent="Align/HexButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -356.5
offset_top = -30.0
offset_right = 130.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1)
texture = ExtResource("4_65fga")

[node name="HexBackground" type="TextureRect" parent="Align"]
visible = false
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("3_o7yxl")
expand_mode = 3

[node name="VAlign" type="VBoxContainer" parent="Align/HexBackground"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TurnLabel" type="Label" parent="Align/HexBackground/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Turn
"
horizontal_alignment = 1

[node name="TurnNumber" type="Label" parent="Align/HexBackground/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="TurnState" type="Label" parent="Align/HexBackground/VAlign"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Waiting
"
horizontal_alignment = 1

[node name="BackgroundBar" type="TextureRect" parent="Align/HexBackground"]
show_behind_parent = true
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -365.342
offset_top = -30.0
offset_right = 121.658
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1)
texture = ExtResource("4_65fga")

[node name="PlayerListRight" type="HBoxContainer" parent="Align"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="PlayerPicker" type="Control" parent="."]
anchors_preset = 0
offset_left = 580.0
offset_top = 324.0
offset_right = 580.0
offset_bottom = 324.0
script = ExtResource("4_amf1a")

[node name="ColorRect" type="ColorRect" parent="PlayerPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="PlayerPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
